--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     left: 1241px;
 }
 
-.desktop .group {
+/* .desktop .group {
     position: absolute;
     width: 48px;
     height: 49px;
@@ -157,13 +157,13 @@
     line-height: normal;
     position: absolute;
     letter-spacing: 0;
-}
+} */
 
 .desktop .rectangle-5 {
     position: absolute;
     width: 1167px;
     height: 519px;
-    top: 241px;
+    top: 150px;
     left: 100px;
     object-fit: cover;
 }
@@ -435,3 +435,155 @@
     font-family: 'Onest', sans-serif;
   }
   
+
+  .header {
+    position: fixed;
+    width: 100vw;
+    height: 119px;
+    top: 0;
+    left: -1px;
+    background-color: #0e0e0e;
+    z-index: 1000;
+  }
+.header .rectangle {
+    position: absolute;
+    width: 119px;
+    height: 119px;
+    top: 0;
+    left: 624px;
+    object-fit: cover;
+}
+.header .overlap {
+    position: absolute;
+    width: 1366px;
+    height: 119px;
+    top: 0;
+    left: -1px;
+    background-color: #0e0e0e;
+    position: center;
+}
+.header .skill-icons {
+    position: absolute;
+    width:75px;
+    height: 75px;
+    top: 19px;
+    left: 1241px;
+}
+.header .group {
+    position: absolute;
+    width: 48px;
+    height: 49px;
+    top: 35px;
+    left: 1016px;
+}
+
+.header .ellipse {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    top: 0;
+    left: 12px;
+    background-color: #d9d9d9;
+    border-radius: 12.26px;
+}
+
+.header .img {
+    position: absolute;
+    width: 46px;
+    height: 46px;
+    top: 0px;
+    left: 3px;
+}
+
+.header .group-2 {
+    position: absolute;
+    width: 55px;
+    height: 38px;
+    top: 41px;
+    left: 39px;
+}
+
+.header .rectangle-2 {
+    position: absolute;
+    width: 55px;
+    height: 6px;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+}
+
+.header .rectangle-3 {
+    position: absolute;
+    width: 55px;
+    height: 6px;
+    top: 32px;
+    left: 0;
+    background-color: #ffffff;
+}
+
+.header .rectangle-4 {
+    position: absolute;
+    width: 55px;
+    height: 6px;
+    top: 16px;
+    left: 0;
+    background-color: #ffffff;
+}
+
+.header .solar-cart-line {
+    position: absolute;
+    width: 65px;
+    height: 65px;
+    top: 27px;
+    left: 899px;
+}
+
+.header .component {
+    position: absolute;
+    width: 260px;
+    height: 55px;
+    top: 32px;
+    left: 169px;
+    background-color: #a9a9a9;
+    border-radius: 10px;
+}
+
+.header .text-wrapper {
+    position: absolute;
+    top: 12px;
+    left: 20px;
+    font-family: "Inter-Regular", Helvetica;
+    font-weight: 400;
+    color: #00000080;
+    font-size: 24.6px;
+    letter-spacing: 0;
+    line-height: normal;
+}
+
+.header .ic-twotone-search {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    top: 5px;
+    left: 207px;
+}
+
+.header .div-wrapper {
+    position: absolute;
+    width: 110px;
+    height: 44px;
+    top: 38px;
+    left: 1098px;
+}
+
+.header .text-wrapper-2 {
+    top: -1px;
+    left: 0;
+    font-family: "Inter-Bold", Helvetica;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 36px;
+    line-height: normal;
+    position: absolute;
+    letter-spacing: 0;
+}
